# pam_configuration

./: CMakeLists.txt  README.md  install  package.xml
config/context/: ball_trajectories.hdf5  ball_trajectories_local.hdf5
config/context/ball_trajectories/: 20190715-182625.json  20190715-182634.json  20190715-182644.json  20190715-182653.json  20190715-182703.json  20190715-182724.json  20190715-182734.json  20190715-182744.json  20190715-182754.json  20190715-190051.json  20190715-190059.json  20190715-190107.json  20190715-190115.json  20190715-190207.json  20190715-190214.json  20190715-190222.json  20190715-190229.json  20190715-190237.json  20190715-190246.json  20190715-190254.json  20190715-190302.json  20190715-190310.json  20190715-190318.json  20190715-190325.json  20190715-190333.json  20190715-190341.json  20190715-190349.json  20190715-190357.json  20190715-190404.json  20190715-190412.json  20190715-190419.json  20190715-190426.json  20190715-190434.json  20190715-190442.json  20190715-190450.json  20190715-190458.json  20190715-190505.json  20190715-190512.json  20190715-190521.json  20190715-190529.json  (+66 more)
config/context/ball_trajectories_lowpass/: 20190715-182625.json  20190715-182634.json  20190715-182644.json  20190715-182653.json  20190715-182703.json  20190715-182724.json  20190715-182734.json  20190715-182744.json  20190715-182754.json  20190715-190051.json  20190715-190059.json  20190715-190107.json  20190715-190115.json  20190715-190207.json  20190715-190214.json  20190715-190222.json  20190715-190229.json  20190715-190237.json  20190715-190246.json  20190715-190254.json  20190715-190302.json  20190715-190310.json  20190715-190318.json  20190715-190325.json  20190715-190333.json  20190715-190341.json  20190715-190349.json  20190715-190357.json  20190715-190404.json  20190715-190412.json  20190715-190419.json  20190715-190426.json  20190715-190434.json  20190715-190442.json  20190715-190450.json  20190715-190458.json  20190715-190505.json  20190715-190512.json  20190715-190521.json  20190715-190529.json  (+67 more)
config/pam_interface/: CMakeLists.txt
config/pam_interface/pamy2/config/: pam.json
config/pam_mujoco/models/: template.xml
config/pam_mujoco/models/igus/: schlaeger_anbindung-Tischtennisschlaeger_Butterfly-1-big.stl
config/pam_mujoco/models/mesh/: Base.stl  J1.stl  J3.stl  J4.stl
config/pam_mujoco/models/robot_templates/: tendon_template.xml
config/pam_mujoco/models/robot_templates/pamy1/: body_template.xml
config/pam_mujoco/models/robot_templates/pamy2/: body_template.xml  body_template_no_muscles.xml
config/pam_mujoco/models/robot_templates/pamy2_old/: body_template_no_muscles.xml
config/pam_mujoco/models/robot_templates/pamy2_old_big/: body_template.xml
config/shadow_hand/xml/: pseudo_real.xml  shadow_robot.xml  shadow_robot_position.xml  shared_asset_sim.xml  sim.xml
config/tennicam_client/: config.toml
include/pam_configuration/: pam_configuration.hpp
src/: pam_configuration.cpp
srcpy/: wrappers.cpp
